--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -3,6 +3,15 @@
   "strings" : {
     "" : {
 
+    },
+    "건너뛰기" : {
+
+    },
+    "다음" : {
+
+    },
+    "편행 시작하기" : {
+
     }
   },
   "version" : "1.0"
