:recycle: Refactor Text initializer usage
- Switched from `Text(verbatim:)` to `Text(_:)` initializer

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -2,51 +2,33 @@
   "sourceLanguage" : "en",
   "strings" : {
     "" : {
-
-    },
-    "총 %lld개의 상품이 있어요!" : {
-      "extractionState" : "manual",
       "localizations" : {
-        "en" : {
-          "variations" : {
-            "plural" : {
-              "one" : {
-                "stringUnit" : {
-                  "state" : "translated",
-                  "value" : "There is a total of %lld product!"
-                }
-              },
-              "other" : {
-                "stringUnit" : {
-                  "state" : "translated",
-                  "value" : "There are a total of %lld product!"
-                }
-              }
-            }
-          }
-        },
         "ja" : {
-          "variations" : {
-            "plural" : {
-              "other" : {
-                "stringUnit" : {
-                  "state" : "translated",
-                  "value" : "合計%lld個の商品があります!"
-                }
-              }
-            }
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : ""
           }
         },
         "ko" : {
-          "variations" : {
-            "plural" : {
-              "other" : {
-                "stringUnit" : {
-                  "state" : "translated",
-                  "value" : "총 %lld개의 상품이 있어요!"
-                }
-              }
-            }
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : ""
+          }
+        }
+      }
+    },
+    "%lld원" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld원"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%lld원"
           }
         }
       }
@@ -92,6 +74,53 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "제품 상세"
+          }
+        }
+      }
+    },
+    "총 %lld개의 상품이 있어요!" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "variations" : {
+            "plural" : {
+              "one" : {
+                "stringUnit" : {
+                  "state" : "translated",
+                  "value" : "There is a total of %lld product!"
+                }
+              },
+              "other" : {
+                "stringUnit" : {
+                  "state" : "translated",
+                  "value" : "There are a total of %lld product!"
+                }
+              }
+            }
+          }
+        },
+        "ja" : {
+          "variations" : {
+            "plural" : {
+              "other" : {
+                "stringUnit" : {
+                  "state" : "translated",
+                  "value" : "合計%lld個の商品があります!"
+                }
+              }
+            }
+          }
+        },
+        "ko" : {
+          "variations" : {
+            "plural" : {
+              "other" : {
+                "stringUnit" : {
+                  "state" : "translated",
+                  "value" : "총 %lld개의 상품이 있어요!"
+                }
+              }
+            }
           }
         }
       }
