이전 행사 정보 UI를 구성한다. (#38)
* 🐛 최초의 Panel의 offset값이 업데이트 되지 않는 버그 수정

* 💄 ProductInfoHeader bottomPadding 추가

* 💄 "이전행사내역" 섹션 추가

* 🌐 '이전행사내역' 영어, 일본어 번역

* 🌐 Localization 번역 수정

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -260,6 +260,28 @@
         }
       }
     },
+    "이전 행사 정보" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Previous Promotions"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "過去のプロモーション"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "이전 행사 정보"
+          }
+        }
+      }
+    },
     "정렬" : {
       "localizations" : {
         "en" : {
