:twisted_rightwards_arrows: [Home] 정렬 버튼 누를 때마다 모드 변경 및 접근성 추가, HomeViewModel 추상화 (#41)
* :recycle: Refactor HomeViewModel abstraction and implementation

- Refactored HomeViewModel and its implementations based on ReactorKit experience, utilizing `Action` and `State` for unified model management.

* :truck: Move onAppear code to HomeView from child views

- Prevented multiple initializations of child views by executing onAppear code in the HomeView

* :sparkles: Add code to update sorting button

* :wheelchair: Provide accessibility through localization for sorting feature

* :sparkles: Trigger product fetching on sorting button press

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -106,6 +106,29 @@
         }
       }
     },
+    "기본 정렬" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "General Sorting"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "般的な並び替え"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "기본 정렬"
+          }
+        }
+      }
+    },
     "기존 가격" : {
       "localizations" : {
         "en" : {
@@ -124,6 +147,29 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "기존 가격"
+          }
+        }
+      }
+    },
+    "내림차순 정렬" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Descending Sorting"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "降順並び替え"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "내림차순 정렬"
           }
         }
       }
@@ -282,24 +328,25 @@
         }
       }
     },
-    "정렬" : {
+    "오름차순 정렬" : {
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Sort"
+            "value" : "Ascending Sorting"
           }
         },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "並び替え"
+            "value" : "昇順並び替え"
           }
         },
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "정렬"
+            "value" : "오름차순 정렬"
           }
         }
       }
