🔀 프로모션 선택 시 바텀시트 표시 / 툴바 아이콘 색상 수정 / 다크모드 연동 (#73)
* :construction: Add changePromotion(Promotion) in HomeAction

* :sparkles: Implement Promotion Select bottom sheet

* :sparkles: Implement modal presentation for promotion selection

* :lipstick: Set text color to gray900

* :lipstick: Fix dark mode UI

* :lipstick: Sync toolbar icon colors with dark mode

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -40,6 +40,38 @@
         }
       }
     },
+    "1+1" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "1+1"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "1+1"
+          }
+        }
+      }
+    },
+    "2+1" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "2+1"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "2+1"
+          }
+        }
+      }
+    },
     "7-Eleven" : {
       "localizations" : {
         "ja" : {
@@ -52,6 +84,22 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "세븐일레븐"
+          }
+        }
+      }
+    },
+    "All(View All)" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "All（全て表示）"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "All(전체보기)"
           }
         }
       }
@@ -196,6 +244,22 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "알림"
+          }
+        }
+      }
+    },
+    "Select Promotion Items" : {
+      "localizations" : {
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "プロモション商品選択"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "행사 품목 선택"
           }
         }
       }
