✨텍스트필드 Placeholder Localizable 등록

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -436,6 +436,28 @@
         }
       }
     },
+    "검색할 상품이름을 입력해주세요" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "enter the product name to search."
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "検索する商品名を入力してください。"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "검색할 상품이름을 입력해주세요."
+          }
+        }
+      }
+    },
     "기본 정렬" : {
       "extractionState" : "manual",
       "localizations" : {
