:lipstick: Update UI interaction

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -435,7 +435,7 @@
         }
       }
     },
-    "Numerous benefits in one place" : {
+    "Numerous benefits" : {
       "localizations" : {
         "ja" : {
           "stringUnit" : {
