:globe_with_meridians: Fix typo in Localizable

--- a/PyeonHaeng-iOS/Resources/Localizable.xcstrings
+++ b/PyeonHaeng-iOS/Resources/Localizable.xcstrings
@@ -344,7 +344,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "セブンイレブン、CU、イーマート24、GS25の数多くのプロモーション情報を\n「`ピョンヘン`」で一箇所で見つけましょう。"
+            "value" : "セブンイレブン、CU、イーマート24、GS25の数多くのプロモーション情報を\n「`ピョンヘン`」一つで見つけましょう。"
           }
         },
         "ko" : {
@@ -440,7 +440,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "多数の特典を一箇所で"
+            "value" : "多数の特典を一つで"
           }
         },
         "ko" : {
@@ -472,7 +472,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "プロモション商品選択"
+            "value" : "プロモーション商品選択"
           }
         },
         "ko" : {
